# bevy_stardust

./: .gitignore  Cargo.toml  LICENSE  LICENSE-APACHE  README.md  rust-toolchain.toml
demos/simple/client/: Cargo.toml
extras/: Cargo.toml  README.md
extras/src/: lib.rs  link.rs  sequence.rs  varint.rs
extras/src/bytes/: mod.rs  stream.rs
extras/src/numbers/: mod.rs  sequence.rs  varint.rs
quic/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PROTOCOL.md  README.md
quic/examples/: certificate.crt  minimal.rs  private_key.key  simple.rs
quic/examples/certs/: generate.sh  server.crt  server.key  verify.sh
quic/examples/minimal/: certificate.crt  client.rs  private_key.key  root-ca.crt  root-ca.key  server.crt  server.key  server.rs  shared.rs
quic/examples/simple/: client.rs  server.crt  server.key  server.rs  shared.rs
quic/examples/star/: client.rs  server.rs  shared.rs
quic/src/: backend.rs  bimap.rs  channels.rs  codes.rs  config.rs  connection.rs  connections.rs  crypto.rs  datagrams.rs  endpoint.rs  endpoints.rs  events.rs  executor.rs  framing.rs  futures.rs  incoming.rs  lib.rs  logging.rs  macros.rs  manager.rs  messages.rs  misc.rs  outgoing.rs  plugin.rs  polling.rs  reader.rs  reading.rs  receive.rs  receiving.rs  runtime.rs  segments.rs  select.rs  sending.rs  socket.rs  streams.rs  taskpool.rs  utilities.rs  writer.rs  writing.rs
quic/src/backend/: connection.rs  datagrams.rs  endpoint.rs  events.rs  mod.rs  outgoing.rs  protocol.rs  socket.rs  streams.rs  taskpool.rs
quic/src/connection/: backend.rs  events.rs  mod.rs  state.rs
quic/src/connections/: codes.rs  mod.rs  reading.rs  sending.rs  systems.rs
quic/src/datagrams/: channels.rs  header.rs  incoming.rs  mod.rs  outgoing.rs  traits.rs
quic/src/ecs/: connection.rs  endpoint.rs  mod.rs
quic/src/endpoint/: backend.rs  builder.rs  connections.rs  control.rs  mod.rs  receiving.rs  scoping.rs  sending.rs  systems.rs
quic/src/endpoints/: mod.rs
quic/src/quiche/: connect.rs  connections.rs  datagrams.rs  endpoints.rs  mod.rs  receiving.rs  sending.rs  streams.rs
quic/src/reading/: manage.rs  pending.rs  stardust.rs  uctrl.rs
quic/src/streams/: channels.rs  codes.rs  commitbuf.rs  events.rs  framing.rs  header.rs  id.rs  impls.rs  incoming.rs  mod.rs  outgoing.rs  queues.rs  recv.rs  send.rs  traits.rs
quiche/: Cargo.toml  README.md
quiche/examples/star/: shared.rs
quiche/src/: connection.rs  crypto.rs  endpoint.rs  events.rs  lib.rs  plugin.rs
quinn/: Cargo.toml  README.md
quinn/examples/: README.md
quinn/examples/certs/: README.md  ca.crt  ca.key  generate.sh  server.ext
quinn/examples/star/: client.rs  server.rs  shared.rs
quinn/src/: access.rs  appmeta.rs  commands.rs  config.rs  connection.rs  connections.rs  drop.rs  endpoint.rs  endpoints.rs  events.rs  lib.rs  manager.rs  plugin.rs  querying.rs  runtime.rs  socket.rs  systems.rs  udp_recv.rs  udp_send.rs  write_queue.rs
quinn/src/backend/: connection.rs  endpoint.rs  executor.rs  mod.rs  socket.rs
quinn/src/backend_async/: mod.rs  runtime.rs
quinn/src/ecs/: connection.rs  endpoint.rs  mod.rs  params.rs  polling.rs  setup.rs
quinn/src/frontend/: endpoint.rs
quinn/src/state/: connection.rs  endpoint.rs
replication/: Cargo.toml  README.md
replication/examples/: events.rs
replication/examples/full/: main.rs  resource.rs  setup.rs
replication/src/: authority.rs  change.rs  changes.rs  components.rs  config.rs  connections.rs  diagnostics.rs  entities.rs  events.rs  groups.rs  hierarchy.rs  identifiers.rs  lib.rs  messages.rs  messaging.rs  modifiers.rs  peer.rs  plugin.rs  plugins.rs  relations.rs  resources.rs  rooms.rs  scheduling.rs  scope.rs  serialisation.rs  state.rs  traits.rs  utils.rs
replication/src/change/: mod.rs  queries.rs  systems.rs
replication/src/components/: change.rs  messages.rs  mod.rs
replication/src/entities/: components.rs  hierarchy.rs  ids.rs  messages.rs  mod.rs  systems.rs
replication/src/resources/: change.rs  messages.rs  mod.rs  systems.rs
replication/src/rooms/: caching.rs  filter.rs  membership.rs  mod.rs  params.rs  systems.rs
replication/src/visibility/: filters.rs  memberships.rs  mod.rs
rooms/: Cargo.toml  README.md
rooms/src/: lib.rs
server/: Cargo.toml
server/src/: auth.rs  client.rs  config.rs  connection.rs  lib.rs  plugin.rs  types.rs
server/src/auth/: config.rs  server.rs  thread.rs  tlsconfig.rs
stardust/: Cargo.toml  LICENSE-MIT  README.md
stardust/examples/: minimal.rs  simple.rs  stress.rs
stardust/examples/minimal/: client.rs  main.rs  server.rs
stardust/src/: channels.rs  client.rs  impls.rs  lib.rs  octets.rs  plugin.rs  prelude.rs  protocol.rs  replication.rs  scheduling.rs  server.rs  setup.rs  shared.rs  state.rs  types.rs
stardust/src/channels/: config.rs  extension.rs  id.rs  incoming.rs  mod.rs  outgoing.rs  params.rs  registry.rs  systems.rs
stardust/src/client/: attempt.rs  connection.rs  mod.rs  peers.rs  plugin.rs  prelude.rs  receive.rs  send.rs  transport.rs
stardust/src/connections/: budget.rs  debug.rs  debug_tools.rs  events.rs  groups.rs  lifestage.rs  messages.rs  mod.rs  peer.rs  security.rs  stats.rs  systems.rs
stardust/src/diagnostics/: connections.rs  messages.rs  mod.rs  slowdown.rs  stats.rs
stardust/src/hashing/: mod.rs  resource.rs  stablehash.rs
stardust/src/impls/: glam.rs  integers.rs  json.rs  network_types.rs  pointers.rs  primitives.rs  transform.rs
stardust/src/messages/: channels.rs  config.rs  constraints.rs  direction.rs  incoming.rs  message.rs  mod.rs  outgoing.rs  queue.rs  reader.rs  systems.rs  writer.rs
stardust/src/octets/: mod.rs  octetstring.rs  payload.rs  varints.rs
udp/: Cargo.toml  LICENSE-APACHE  README.md  protocol.md
udp/examples/: minimal.rs
udp/src/: appdata.rs  config.rs  connection.rs  datagram.rs  diagnostics.rs  endpoint.rs  established.rs  handshake.rs  lib.rs  manager.rs  ordering.rs  packet.rs  plugin.rs  policy.rs  ports.rs  prelude.rs  receiving.rs  reliability.rs  schedule.rs  sending.rs  sequences.rs  utils.rs  varint.rs  version.rs
(+319 files in other folders)
