[package]
name="bevy_stardust_extras"
version="0.2.0"
edition="2021"
authors=["Veritius <veritiusgaming@gmail.com>"]
license="MIT OR Apache-2.0"
description="Miscellaneous utilities for bevy_stardust"
repository="https://github.com/veritius/bevy_stardust/"
keywords=["bevy", "gamedev", "networking"]

[dependencies.bevy_ecs]
version = "0.14"
default-features = false

[dependencies.bevy_app]
version = "0.14"
default-features = false

[dependencies.bevy_stardust]
version = "0.7"
path = "../stardust"

[dependencies.octs]
version = "0.4.0"
optional = true

[features]
octs = ["dep:octs"]