[package]
name="bevy_stardust_quic"
version="0.1.0"
edition="2021"
authors=["Veritius <veritiusgaming@gmail.com>"]
license="MIT OR Apache-2.0"
description="A QUIC transport layer for bevy_stardust."
repository="https://github.com/veritius/bevy_stardust/"
keywords=["bevy", "gamedev", "networking"]

[dependencies.bevy_ecs]
version = "0.15"
default-features = false

[dependencies.bevy_app]
version = "0.15"
default-features = false

[dependencies.bevy_stardust]
version = "0.7.0"
path = "../stardust"

[dependencies.quinn-proto]
version = "0.11.8"

[dependencies.rustls]
version = "0.23.14"

[dependencies.bytes]
version = "1.5.0"

[dependencies.crossbeam-channel]
version = "0.5"

[dependencies.async-task]
version = "4.7"

[dependencies.async-channel]
version = "2.3"

[dependencies.async-io]
version = "2.4"

[dependencies.blocking]
version = "1.6"

[dependencies.futures-lite]
version = "2.5"

[dependencies.concurrent-queue]
version = "2.5"

[dependencies.log]
version = "0.4"

[dependencies.ring]
version = "0.17"

[dependencies.rand]
version = "0.8"

[dev-dependencies.rustls-pemfile]
version = "2"

[dev-dependencies.bevy_log]
version = "0.15"

[[example]]
name = "star_client"
path = "examples/star/client.rs"

[[example]]
name = "star_server"
path = "examples/star/server.rs"

[[example]]
name = "star_shared"
path = "examples/star/shared.rs"
crate-type = ["lib"]