[package]
name="bevy_stardust_quiche"
version="0.1.0"
edition="2021"
authors=["Veritius <veritiusgaming@gmail.com>"]
license="MIT OR Apache-2.0"
description="Quiche-based QUIC transport layer for bevy_stardust"
repository="https://github.com/veritius/bevy_stardust/"
keywords=["bevy", "gamedev", "networking"]

[dependencies.bevy]
version = "0.14"
default-features = false

[dependencies.bevy_stardust]
version = "0.6"
path = "../stardust"

[dependencies.bevy_stardust_quic]
version = "0.1"
path = "../quic"

[dependencies.quiche]
version = "0.22"
default-features = false
features = ["boringssl-boring-crate"]

[dependencies.boring]
version = "4"

[dependencies.bytes]
version = "1.5.0"

[dependencies.crossbeam-channel]
version = "0.5.13"

[dependencies.anyhow]
version = "1"

[[example]]
name = "star_client"
path = "examples/star/client.rs"

[[example]]
name = "star_server"
path = "examples/star/server.rs"

[[example]]
name = "star_shared"
path = "examples/star/shared.rs"
crate-type = ["lib"]