[package]
name="bevy_stardust_quinn"
version="0.1.0"
edition="2021"
authors=["Veritius <veritiusgaming@gmail.com>"]
license="MIT OR Apache-2.0"
description="A QUIC transport layer for bevy_stardust, based off bevy_stardust_quic"
repository="https://github.com/veritius/bevy_stardust/"
keywords=["bevy", "gamedev", "networking"]

[dependencies.bevy]
version = "0.14"
default-features = false

[dependencies.bevy_stardust]
version = "0.6.0"
path = "../stardust"

[dependencies.bevy_stardust_quic]
version = "0.1.0"
path = "../quic"

[dependencies.quinn]
version = "0.11.2"
features = ["log", "ring", "rustls"]
default-features = false

[dependencies.tokio]
version = "1.39.2"
features = ["net", "time"]

[dependencies.pin-project-lite]
version = "0.2.14"

[dependencies.bytes]
version = "1.5.0"

[dependencies.anyhow]
version = "1"

[[example]]
name = "star_client"
path = "examples/star/client.rs"

[[example]]
name = "star_server"
path = "examples/star/server.rs"

[[example]]
name = "star_shared"
path = "examples/star/shared.rs"
crate-type = ["lib"]