[package]
name="bevy_stardust_quinn"
version="0.1.0"
edition="2021"
authors=["Veritius <veritiusgaming@gmail.com>"]
license="MIT OR Apache-2.0"
description="A QUIC transport layer for bevy_stardust, based off bevy_stardust_quic"
repository="https://github.com/veritius/bevy_stardust/"
keywords=["bevy", "gamedev", "networking"]

[dependencies.bevy_ecs]
version = "0.14"
default-features = false

[dependencies.bevy_app]
version = "0.14"
default-features = false

[dependencies.bevy_log]
version = "0.14"
optional = true

[dependencies.bevy_stardust]
version = "0.6.0"
path = "../stardust"

[dependencies.bevy_stardust_quic]
version = "0.1.0"
path = "../quic"

[dependencies.quinn-proto]
version = "0.11.8"

[dependencies.rustls]
version = "0.23.14"

[dependencies.async-task]
version = "4.7"

[dependencies.async-executor]
version = "1.13"

[dependencies.crossbeam-channel]
version = "0.5"

[dependencies.mio]
version = "1"
features = ["net", "os-poll"]

[dependencies.bytes]
version = "1.5.0"

[dependencies.socket2]
version = "0.5.7"

[dependencies.anyhow]
version = "1"

[dependencies.futures-lite]
version = "2.4"

[dev-dependencies.rustls-pemfile]
version = "2"

[dev-dependencies.bevy_log]
version = "0.14"

[[example]]
name = "star_client"
path = "examples/star/client.rs"

[[example]]
name = "star_server"
path = "examples/star/server.rs"

[[example]]
name = "star_shared"
path = "examples/star/shared.rs"
crate-type = ["lib"]

[features]
default = ["async"]

log = [
    "dep:bevy_log",
]

async = []