[package]
name="bevy_stardust_replicate"
version="0.1.0"
edition="2021"
authors=["Veritius <veritiusgaming@gmail.com>"]
license="MIT OR Apache-2.0"
description="Authoritative replication functionality for Stardust."
repository="https://github.com/veritius/bevy_stardust/"
keywords=["bevy", "gamedev", "networking"]

[dependencies.bevy]
version = "0.13"
default-features = false

[dependencies.bevy_stardust]
version = "0.6"
path = "../stardust"
default-features = false

[dependencies.smallvec]
version = "1.13"
features = ["union"]

[dependencies.anyhow]
version = "1"

[dependencies.bytes]
version = "1.5"

[dependencies.unbytes]
version = "0.3"

[dependencies.serde]
version = "1"
optional = true

[dependencies.bincode]
version = "1.3"
optional = true

[dev-dependencies]
fastrand = "2"
bevy = { version = "0.13" }

[features]
default = ["serde"]
serde = ["dep:serde", "dep:bincode", "bevy/serialize"]
reflect = ["bevy_stardust/reflect"]