[package]
name="bevy_stardust_replication"
version="0.1.0"
edition="2021"
authors=["Veritius <veritiusgaming@gmail.com>"]
license="MIT OR Apache-2.0"
description="Authoritative replication functionality for Stardust."
repository="https://github.com/veritius/bevy_stardust/"
keywords=["bevy", "gamedev", "networking"]

[dependencie.bevy]
version = "0.14"
default-features = false

[dependencies.bevy_stardust]
version = "0.6"