[package]
name="bevy_stardust"
version="0.6.0"
edition="2021"
authors=["Veritius <veritiusgaming@gmail.com>"]
license="MIT OR Apache-2.0"
description="A networking crate for the Bevy game engine."
repository="https://github.com/veritius/bevy_stardust/"
keywords=["bevy", "gamedev", "networking"]

[dependencies.bevy]
version = "0.14"
default-features = false

[dependencies.bytes]
version = "1.5.0"

[dependencies.smallvec]
version = "1.11.1"
