[package]
name="bevy_stardust"
version="0.6.0"
edition="2021"
authors=["Veritius <veritiusgaming@gmail.com>"]
license="MIT OR Apache-2.0"
description="A networking crate for the Bevy game engine."
repository="https://github.com/veritius/bevy_stardust/"
keywords=["bevy", "gamedev", "networking"]

[dependencies.bevy_ecs]
version = "0.14"
default-features = false
features = ["bevy_reflect"]

[dependencies.bevy_app]
version = "0.14"
default-features = false

[dependencies.bevy_reflect]
version = "0.14"
default-features = false

[dependencies.bevy_diagnostic]
version = "0.14"
optional = true

[dependencies.bytes]
version = "1.5.0"

[dependencies.smallvec]
version = "1.11.1"

[dependencies.hashbrown]
version = "0.14"

[features]
debug_tools = []
diagnostics = ["dep:bevy_diagnostic"]