[package]
name="bevy_stardust_udp"
version="0.1.0"
edition="2021"
authors=["Veritius <veritiusgaming@gmail.com>"]
readme="README.md"
license="MIT OR Apache-2.0"
description="A transport layer for bevy_stardust that uses native UDP."
repository="https://github.com/veritius/bevy_stardust/"
keywords=["bevy", "gamedev", "networking"]

[dependencies]
# Required dependencies
bevy = { version = "0.12", default-features = false }
bevy_stardust = { version = "0.2", path = "../stardust" }
bytes = "1.5.0"
rayon = "1.8"
rand = "0.8"
anyhow = "1"

# Encryption dependencies
rustls = { version = "0.22", optional = true }
ring = { version = "0.17", optional = true }
webpki-roots = { version = "0.26.1", optional = true }

[features]
default = ["encryption"]
encryption = [
    "dep:rustls",
    "dep:ring",
]
encryption-webpki-roots = [
    "encryption",
    "dep:webpki-roots",
]