[package]
name="bevy_stardust_udp"
version="0.1.0"
edition="2021"
authors=["Veritius <veritiusgaming@gmail.com>"]
readme="README.md"
license="MIT OR Apache-2.0"
description="A transport layer for bevy_stardust that uses native UDP."
repository="https://github.com/veritius/bevy_stardust/"
keywords=["bevy", "gamedev", "networking"]

[dependencies]
# Required dependencies
bevy_ecs = { version = "0.13", default-features = false }
bevy_app = { version = "0.13", default-features = false }
bevy_reflect = { version = "0.13", optional = true }
bevy_stardust = { version = "0.3", path = "../stardust", default-features = false }
bytes = "1.5.0"
untrusted = "0.9"
smallvec = "1.11.1"
tracing = "0.1"
anyhow = "1"

[features]
default = ["reflect"]
reflect = [
    "dep:bevy_reflect",
    "bevy_stardust/reflect",
    "bevy_ecs/bevy_reflect",
    "bevy_app/bevy_reflect"
]