[package]
name="bevy_stardust_client_simpledemo"
version="0.1.0"
edition="2021"
authors=["Veritius <veritiusgaming@gmail.com>"]

[dependencies]
"bevy_stardust_shared_simpledemo" = { path = "../shared" }
"bevy_stardust_shared" = { path = "../../../shared" }
"bevy_stardust_client" = { path = "../../../client" }